{{$NEXT}}
          - add AppVeyor CI

0.2309    2019-01-06 20:29:15Z
          - fix longstanding pod formatting error (issue #19, RT#109526)

0.2308    2018-07-11 21:06:16Z
          - remove File::Temp::Dir from the PAUSE index (it is not in its own
            .pm file, so it is not 'use'able on its own)

0.2307    2018-06-24 19:40:29Z (TRIAL RELEASE)
          - change EXLOCK default from true to false; addresses RT#123959.
            Note that this option was always a no-op on non-BSD platforms;
            changing the default to false makes behaviour more predictable and
            consistent across platforms.

0.2306    2018-06-24 19:33:47Z
          - switch from 'use vars' to 'our'

0.2305    2018-04-19 11:58:49Z (TRIAL RELEASE)
          - documentation updates for what versions contain what features
            (thanks, Brian Mowrey! RT#101518)
          - fix bad use of skip() in tests (RT#95922)
          - Fall back to CSIDL_LOCAL_APPDATA under taint on Windows (RT#60340)
          - update distribution tooling

0.2304    2013-10-10 13:16:27Z

        * List all detectable dependencies for completeness. (Test::More had
          been unintentionally omitted in the last release and many core
          dependencies had never been listed.)

0.2303    2013-10-09 13:57:21Z

        * Remove compile test and associated dependencies

0.2302    2013-09-26 13:45:35Z

        * Drop minimum Perl version back to 5.6 (erroneously bumped by dzil)
        * Do not inherit from Exporter (requires Exporter 5.57) (thanks to
          Olivier Mengué)
        * 'use base ...' => 'use parent ...' as parent is lighter (thanks to
          Olivier Mengué)

0.2301    2013-04-11 15:30:05Z

        * dist.ini: Managed with Dist::Zilla now; generates Makefile.PL
          to avoid circular dependency when using Build.PL

0.23      2013-03-14 Tim Jenness <tjenness@cpan.org>

	* Build.PL: Use Module::Build
