@@ -1,5 +1,6 @@
 {{$NEXT}}
           - add AppVeyor CI
+          - Add PERMS options to create temp file with given file permissions
 
 0.2309    2019-01-06 20:29:15Z
           - fix longstanding pod formatting error (issue #19, RT#109526)
